Correction on importing the Blurred Box

--- a/Reg_Stylesheet.css
+++ b/Reg_Stylesheet.css
@@ -20,7 +20,7 @@ body {
   height: 600px;
   padding: 40px 40px 0px;
   box-sizing: border-box;
-  background-image: url("BGBox.jpg");
+  background-image: url("BGbox.jpg");
 }
 #title{
   color: #eee;
